// for validation examples
// https://github.com/bufbuild/protovalidate/tree/main/examples

syntax = "proto3";
package GroupService;
option go_package = "./group-service-grpc-gen";

import "buf/validate/validate.proto";

message GetGroupUsersRequest {
  string groupId = 1 [(buf.validate.field).cel = {
    id: "groupId",
    message: "Group Id is required",
    expression: "this != ''",
  }];
}

message GetGroupUsersResponse {
  string status = 1;
  repeated  string userIds = 2;
}



service GroupService {
  rpc GetGroupUsers(GetGroupUsersRequest) returns (GetGroupUsersResponse);
}
